2005-11-30  Murray Cumming <murrayc@murrayc.com>

	* gtk/gtkmm/accelmap.cc:
	* gtk/gtkmm/accelmap.h: Added lookup_entry(), wrapping 
	gtk_accel_map_lookup_entry, based on code provided by 
	Paul Davis in bug #318407.

2005-11-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/style.ccg: Fix the cast, to fix the build

2005-11-29  Murray Cumming <murrayc@murrayc.com>

	* build_shared/Makefile_build.am_fragment:
	* configure.in: Added --enable-deprecated-api option: 
	Set it to yes to remove deprecated API from the library, 
	for instance for embedded devices.
	* gdk/src/color.ccg:
	* gdk/src/color.hg:
	* gdk/src/colormap.ccg:
	* gdk/src/colormap.hg:
	* gdk/src/image.hg:
	* gdk/src/window.hg:
	* gtk/src/calendar.hg:
	* gtk/src/cellrenderer.hg:
	* gtk/src/combo.hg:
	* gtk/src/fileselection.hg:
	* gtk/src/inputdialog.hg:
	* gtk/src/messagedialog.hg:
	* gtk/src/optionmenu.hg:
	* gtk/src/progress.hg:
	* gtk/src/textbuffer.ccg:
	* gtk/src/textbuffer.hg:
	* gtk/src/textview.ccg:
	* gtk/src/textview.hg:
	* gtk/src/toolbar.hg:
	* gtk/src/treemodel.hg:
	* gtk/src/treemodelfilter.hg:
	* gtk/src/treepath.ccg:
	* gtk/src/treepath.hg:
	* gtk/src/treesortable.ccg:
	* gtk/src/treesortable.hg:
	* gtk/src/treeview.ccg:
	* gtk/src/treeview.hg:
	* gtk/src/treeviewcolumn.ccg:
	* gtk/src/treeviewcolumn.hg:
	* gtk/src/widget.hg: Use the new gmmproc features to 
	ifdef-out the deprecated API.
	* tests/menu_destruction/main.cc:
	* demos/gtk-demo/example_iconview.cc:
	* demos/gtk-demo/example_menus.cc:
	* demos/gtk-demo/example_sizegroup.cc:
	* demos/gtk-demo/example_textview.cc: 
	* examples/Makefile.am_fragment:
	* examples/book/custom/custom_container/mycontainer.cc:
	* examples/book/dialogs/fileselection/examplewindow.cc:
	* examples/book/range_widgets/labeledoptionmenu.cc:
	* examples/book/range_widgets/labeledoptionmenu.h:
	* examples/cellrenderercustom/popupentry.cc:
	* examples/stock/stock.cc: Do not use deprecated API.

2005-11-29  Murray Cumming <murrayc@murrayc.com>
