@@ -1,5 +1,15 @@
 2005-11-30  Murray Cumming <murrayc@murrayc.com>
 
+	* configure.in:
+	* gtk/gtkmmconfig.h.in: Check for the mkifofs() 
+	function (not available in windows, apparently), and 
+	define HAVE_MKIFOFS.
+	* examples/book/input/main.cc: Do not use mkifofs 
+	if it is not present, to fix build on Windows.
+	Bug #309031 from haleykd.
+
+2005-11-30  Murray Cumming <murrayc@murrayc.com>
+
 	* gtk/gtkmm/accelmap.cc:
 	* gtk/gtkmm/accelmap.h: Added lookup_entry(), wrapping 
 	gtk_accel_map_lookup_entry, based on code provided by 
